# crubit

./: .bazelrc  .gitignore  .gitmodules  BUILD  BUILD.gn  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  book.toml  crubit.gni  crubit.gwsq  matrix.json  nightly-0.json  nightly-1.json  nightly-2.json  nightly-3.json  nightly-4.json  nightly-5.json  nightly-6.json  rust-toolchain.toml  stable-0.json  stable-1.json
cargo/cc_bindings_from_rs/cargo-cpp_api_from_rust/: Cargo.toml
cargo/cc_bindings_from_rs/cc_bindings_from_rs/: Cargo.toml
cargo/cc_bindings_from_rs/cmdline/: Cargo.toml
cargo/cc_bindings_from_rs/crubit_attr/: Cargo.toml
cargo/cc_bindings_from_rs/run_compiler/: Cargo.toml
cargo/cc_bindings_from_rs/toposort/: Cargo.toml
cargo/common/arc_anyhow/: Cargo.toml
cargo/common/cc_ffi_types_sys/: Cargo.toml  build.rs  lib.rs
cargo/common/code_gen_utils/: Cargo.toml
cargo/common/crubit_abi_type/: Cargo.toml
cargo/common/crubit_feature/: Cargo.toml
cargo/common/dyn_format/: Cargo.toml
cargo/common/error_report/: Cargo.toml
cargo/common/errors/: Cargo.toml
cargo/common/external_binaries/: Cargo.toml
cc_bindings_from_rs/: BUILD  Cargo.toml  README.md  bindings.rs  cargo-cpp_api_from_rust.rs  cc_bindings_from_rs.rs  cc_bindings_from_rs_legacy_toolchain_runner.sh  cc_bindings_from_rs_sh_test.sh  cmdline.rs  crubit_attr.rs  crubit_attr_test.rs  legacy_toolchain_test_wrapper.sh  lib.rs  main.rs  run_compiler.rs  run_compiler_test_support.rs  toposort.rs
cc_bindings_from_rs/bazel_support/: BUILD  cc_bindings_from_rust_cli_flag_aspect_hint.bzl  cc_bindings_from_rust_library_config_aspect_hint.bzl  cc_bindings_from_rust_rule.bzl  legacy_toolchain_config_setting.bzl  providers.bzl  toolchain.bzl
cc_bindings_from_rs/generate_bindings/: BUILD  avoid_colliding_types.rs  avoid_colliding_types_test.rs  code_snippet.rs  db.rs  format_type.rs  format_type_test.rs  generate_bindings_test.rs  generate_function.rs  generate_function_test.rs  generate_function_thunk.rs  generate_struct_and_union.rs  generate_struct_and_union_test.rs  generate_template_specialization.rs  get_generic_args.rs  lib.rs  query_compiler.rs  test_helpers.rs
cc_bindings_from_rs/generate_bindings/database/: BUILD  adt_core_bindings.rs  code_snippet.rs  cpp_type.rs  db.rs  fine_grained_feature.rs  fully_qualified_name.rs  fully_qualified_name_test.rs  include_guard.rs  lib.rs  static_method_mode.rs  sugared_ty.rs  type_location.rs
cc_bindings_from_rs/test/: README.md  crubit_cc_test.bzl
cc_bindings_from_rs/test/aliasing_references/: BUILD  aliasing_references.rs  aliasing_references_cc_api.h  aliasing_references_cc_api_impl.rs  aliasing_references_test.cc
cc_bindings_from_rs/test/arrays/: BUILD  arrays.rs  arrays_cc_api.h  arrays_cc_api_impl.rs  arrays_test.cc
cc_bindings_from_rs/test/async_fn/: BUILD  async_fn.rs  async_fn_cc_api.h  async_fn_cc_api_impl.rs  async_fn_co_test.cc  async_fn_existing_cpp_types.h  async_fn_test.cc
cc_bindings_from_rs/test/attribute/: BUILD  cpp_name.rs  cpp_name_cc_api.h  cpp_name_cc_api_impl.rs  cpp_name_test.cc  must_bind.rs  must_bind_cc_api.h  must_bind_cc_api_impl.rs  (+1 more)
support/: BUILD  BUILD.gn  CMakeLists.txt  README.md  annotations.h  annotations.swig  annotations_internal.h  bridge.h  bridge.rs  bridge_cpp.h  bridge_cpp_test.cc  bridge_test.cc  check_no_mutable_aliasing.cc  check_no_mutable_aliasing.h  check_no_mutable_aliasing_test.cc  cref.rs  cref_test.rs  crubit_annotate.rs  crubit_annotate_test.rs  ctor.rs  ctor_macro_test.rs  ctor_proc_macros.rs  ctor_proc_macros_e2e_test.rs  ctor_proc_macros_test.rs  ctor_rename_test.rs  ctor_test.rs  forward_declare.rs  forward_declare_macros_test.rs  forward_declare_proc_macros.rs  forward_declare_unstable_test.rs  lifetime_annotations.h  offsetof_test.cc  oops.rs  operator.rs  status_bridge.cc  status_bridge.h  status_bridge_test.cc  utf8_lossy.rs
support/cc_import/: BUILD  merged_namespaces.rs
support/cc_std/: BUILD  README.md  conversion_function_helpers.h  cpp_std_allocator.rs  cpp_std_string.h  cpp_std_string.rs  grte_versions.bzl  slice_ptr.rs  std_allocator.h  string.rs  string_view.rs  unique_ptr.rs  vector.rs  vector_partial_eq.rs
support/cc_std_impl/: BUILD  README.md  conversion_function_helpers.h  cpp_std_allocator.rs  google_allocator.rs  headers.bzl  lossy_utf8.rs  optional.rs  shared_ptr.rs  std_allocator.h  string.rs  string_view.rs  unique_ptr.rs  vector.rs  vector_partial_eq.rs
support/cc_template/: BUILD  cc_template_impl.rs
support/crubit_annotate/: Cargo.toml
support/crubit_bridge_rust/: Cargo.toml
support/extra_rs_srcs_for_cc_std/: BUILD  README.md  string_view.rs
support/extract_cpp_from_rust/: BUILD  cc_library_extracted_from_rust.bzl  extract_cpp.bzl  extract_cpp_from_rust.rs  inline_cpp_macro.rs  inline_cpp_utils.rs  rust_library_with_embedded_cpp.bzl
support/ffi_11/: BUILD  BUILD.gn  CMakeLists.txt  Cargo.toml  README.md
support/internal/: BUILD  BUILD.gn  CMakeLists.txt  README.md  attribute_macros.h  check.h  check_no_mutable_aliasing.cc  check_no_mutable_aliasing.h  check_no_mutable_aliasing_test.cc  cxx20_backports.h  fmt.h  lazy_init.h  memswap.h  memswap_test.cc  move_assign.h  offsetof.h  offsetof_test.cc  return_value_slot.h  return_value_slot_test.cc  sizeof.h  sizeof_test.cc  slot.h  slot_test.cc
support/rs_std/: BUILD  BUILD.gn  CMakeLists.txt  README.md  char.cc  char.h  char_test.cc  cpp_waker.cc  cpp_waker.h  dyn_callable.h  dyn_callable.rs  dyn_callable_test.cc  dyn_erased_future.h  dyn_erased_future.rs  dyn_future.rs  erased_future.rs  erased_future_test.rs  iterator_adapter.h  iterator_adapter_test.cc  lossy_formatter.rs  lossy_formatter_for_bindings.h  lossy_formatter_for_bindings.rs  option.h  result.h  rs_char.h  rs_char_test.cc  slice_ref.h  slice_ref_test.cc  str_ref.h  str_ref_test.cc  traits.h  tuple.h  vec.h  waker.cc  waker.h
support/rstd/: BUILD  README.md  char.h  char_test.cc
support/stable_fallback/: BUILD  README.md  forward_declare_stable_test.rs
(+2486 files in other folders)
