# Part of the Crubit project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[workspace]
members = [
  "cargo/cc_bindings_from_rs/cc_bindings_from_rs",
  "cargo/rs_bindings_from_cc/rs_bindings_from_cc",
  "support/ffi_11",
]
resolver = "2"

# In other crubit Cargo.toml files the version should just be specified as
# `packagename.workspace = true` and the actual version choice and features
# will be decided from here.
[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = [ "derive" ] }
either = "1"
flagset = "0.4"
heck = "0.5"
itertools = "0.13"
phf = { version = "0.11", features = [ "macros" ] }
proc-macro2 = "1"
quote = "1"
regex = "1"
rustversion = "1"
serde = { version = "1", features = [ "derive", "rc" ] }
serde_json = "1"
syn = { version = "2", features = [ "extra-traits" ] }
tracing = "0.1"
unicode-ident = "1"

[workspace.package]

edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/google/crubit"
categories = ["development-tools::ffi"]
