# Part of the Crubit project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[package]
name = "crubit_bridge_rust"
version = "0.1.0"
description = "A mutually understood ABI for sending bridge types between Rust and C++."
edition.workspace = true
license-file.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
path = "src/bridge.rs"

[dependencies]

[dev-dependencies]
googletest.workspace = true
