# Part of the Crubit project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[package]
name = "ffi_11"
version = "0.1.0"
edition.workspace = true

[dependencies]

[dev-dependencies]
static_assertions = "1"
