# Part of the Crubit project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

# Automatically @generated BUILD.gn.

import("../../crubit.gni")

visibility = [ "$crubit_src_dir/*" ]

source_set("bindings_support") {
  public_configs = [ "$crubit_src_dir/support:config" ]
  if (defined(crubit_gn_configs_to_remove)) {
    configs -= crubit_gn_configs_to_remove
  }
  if (defined(crubit_gn_support_configs_to_add)) {
    configs += crubit_gn_support_configs_to_add
  }

  public = [
    "check.h",
    "check_no_mutable_aliasing.h",
    "cxx20_backports.h",
    "fmt.h",
    "memswap.h",
    "move_assign.h",
    "offsetof.h",
    "sizeof.h",
    "slot.h",
  ]
  sources = [
    "check_no_mutable_aliasing.cc",
  ]
  deps = [
    "$crubit_absl_dep_target",
  ]
}

group("internal_cpp") {
  public_deps = [
    ":bindings_support",
  ]
}

